--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -30,6 +30,8 @@
         </activity>
         <activity android:name="com.example.love_reading.seeyou.CaptureActivityPortrait" >
         </activity>
+        <activity android:name="com.example.love_reading.BookView" >
+        </activity>
     </application>
 
 </manifest>
